@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<import-steps>
-  <import-step id="atcttool"
-    version="20060603-01"
-    handler="Products.ATContentTypes.exportimport.atcttool.importATCTTool"
-    title="ATContentTypes Tool">
-    <dependency step="toolset"/>
-    Import ATContentTypes specific configuration.
-  </import-step>
-</import-steps>
