@@ -1,7 +1,8 @@
 1.2.0-devel unreleased
 ======================
 
- * Added an extension profile and an exportimport handler for the ATCT tool.
+ * Added an exportimport handler for the ATCT tool which is used by the Plone
+   base profile.
    [hannosch]
 
  * Adjusted some deprecated getActionById to getActionInfo calls.
